apps/example-apps/react/learn/basic-terms/index.css
@import url('./xy-theme.css');

html,
body {
  margin: 0;
  font-family: sans-serif;
}

#app {
  width: 100vw;
  height: 100vh;
}
/* Annotation Node */

.react-flow__node-annotation {
  font-size: 16px;
  max-width: 300px;
  color: #683bfa;
  position: absolute;
  box-shadow: none;
  font-family: monospace;
  text-align: left;
  background-color: transparent;
  border: none;
  pointer-events: none;
}

.react-flow__node-annotation .annotation-content {
  padding: 10px;
  display: flex;
}

.react-flow__node-annotation .annotation-level {
  margin-right: 4px;
}

.react-flow__node-annotation .annotation-arrow {
  position: absolute;
  font-size: 24px;
}

.arrow-top-right {
  right: 0;
  bottom: 0;
  transform: translate(10px, -25px) rotate(-140deg);
  position: absolute;
}

.arrow-top-left {
  left: 0;
  bottom: 0;
  transform: translate(-5px, -25px) rotate(145deg) scale(-1, 1);
  position: absolute;
}

.arrow-bottom-left {
  left: 0;
  bottom: 0;
  transform: translate(0px, -20px) rotate(90deg);
  position: absolute;
}

.arrow-bottom-right {
  right: 0;
  bottom: 0;
  transform: translate(10px, 5px) rotate(-60deg);
  position: absolute;
}

.arrow-handle {
  left: 0;
  bottom: 0;
  transform: translate(-15px, -25px) rotate(160deg) scale(-1, 1);
  position: absolute;
}

.react-flow__edge-textbg {
  fill: #f7f9fb;
}

